<resources>
    <string name="app_name">ContactList</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">lastname</string>
    <string name="number">number</string>
    <string name="edit">Edit</string>
</resources>