<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="13dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="monospace"
            android:text="@string/username"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:fontFamily="monospace"
            android:text="@string/password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_cpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:fontFamily="monospace"
            android:text="@string/confirm_password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_cpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="17"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:ems="12"
            android:text="@string/save" />

        <TextView
            android:id="@+id/err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:layout_gravity="center"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>